# Choir_Audio_spec

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt
data/example/: .gitkeep
data/raw/: .gitkeep
docs/: audio_sheet_guide.md  quality_metrics_guide.md  spectrogram_guide.md
pitch_eval_repro/: README.md  __init__.py  requirements_optional.txt
pitch_eval_repro/outputs/: .gitkeep
pitch_eval_repro/outputs/1_good/: f0_tracks.csv  report.json
pitch_eval_repro/outputs/21_bad/: f0_tracks.csv  report.json
pitch_eval_repro/outputs/sopran_03660/: f0_tracks.csv  report.json
pitch_eval_repro/scripts/: run_eval.py
pitch_eval_repro/src/: audio_io.py  color_map.py  pipeline.py  pitch_estimator.py  pitch_units.py  render.py
scripts/: run_audio_sheet.py  run_pitch_eval.py  run_pitch_mask.py  run_pitch_reference.py  run_spectrogram_vis.py
src/choir_judge/: __init__.py  audio_sheet.py  config.py  io_audio.py  pitch_confidence.py  quality_gate.py  spectrogram_vis.py
src/pitch_eval/: __init__.py  features.py  reference.py  report.py  scoring.py  weights.py
tests/: test_smoke.py
