[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choir-audio-judge"
version = "0.1.0"
description = "Choir audio quality evaluation system"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "librosa",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"